2005-06-24  James Henstridge  <james@jamesh.id.au>

	* modulesets/freedesktop.modules (cairo): add a <suggests> on
	glitz, so that if both modules are built they get built in the
	right order.

2005-06-23  James Henstridge  <james@jamesh.id.au>

	* jhbuild/frontends/terminal.py (TerminalBuildScript.execute):
	handle ctrl+C better.

	* jhbuild/utils/arch.py (ArchArchive.checkout):
	(ArchArchive.update): use argument lists

	* jhbuild/utils/svn.py (SVNRoot.checkout, SVNRoot.update): use
	argument lists.

	* jhbuild/frontends/tinderbox.py (TinderboxBuildScript.execute):
	same here.

	* jhbuild/frontends/terminal.py (TerminalBuildScript.execute): if
	an argument list is given, join the arguments before printing it
	to the screen.

	* jhbuild/utils/cvs.py (CVSRoot.checkout, CVSRoot.update): use an
	argument list rather than an argument string.

	* jhbuild/commands/sanitycheck.py: pass argument lists instead of
	strings, to avoid shell calls.

	* jhbuild/commands/sanitycheck.py (check_version): use enumerate()
	where appropriate.

	* jhbuild/frontends/terminal.py (TerminalBuildScript.execute): use
	execute_pprint() again for "CVS" colourisation.

	* jhbuild/utils/cmds.py (execute_pprint): add back because it is
	used by tinderbox too, but port to subprocess.

	* jhbuild/frontends/terminal.py (TerminalBuildScript.execute): use
	the subprocess module to implement execute().

	* jhbuild/utils/cmds.py (get_output): use subprocess module.
	(execute_pprint): remove function.

	* jhbuild/monkeypatch.py: add enumerate() and string.Template (not
	used yet).
	(subprocess): provide the subprocess module if it isn't available.

	* README: bump required python version to 2.2.

2005-06-23  Kaushal Kumar  <kakumar@novell.com>

	* modulesets/gnome-2.12.modules:

	Remove Gal. Gal has merged into evolution.

2005-06-22  Seth Nickell  <seth@gnome.org>

	* modulesets/gnome-2.12.modules:

	Remove luminocity from gnome-2.12 modules. The entry