@@ -1,5 +1,14 @@
 2005-06-24  James Henstridge  <james@jamesh.id.au>
 
+	* jhbuild/utils/cmds.py (get_output): same here.
+	(execute_pprint): same here.
+
+	* jhbuild/frontends/tinderbox.py (TinderboxBuildScript.execute):
+	same here.
+
+	* jhbuild/frontends/terminal.py (TerminalBuildScript.execute):
+	useshell for unicode strings too.
+
 	* modulesets/freedesktop.modules (cairo): add a <suggests> on
 	glitz, so that if both modules are built they get built in the
 	right order.
